# matrix-count

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml  run_examples.py
.github/: CONTRIBUTING.md
.github/workflows/: build_test.yml  cd.yml  ci.yml  release.yml
SIS/: Makefile  SIS  SIS.cpp  estimates.cpp  estimates.h  example.txt  generate_samples  generate_samples.cpp  generate_samples.h  globals.h  helpers.cpp  helpers.h  in.txt  out.txt  preprocessing.cpp  preprocessing.h
SIS/analysis/: SIS_runner.py  SIS_runner.sh  gen_data.py  gen_real_data.py  gen_real_network.py  plot_alpha_error.py  real_degrees.csv  results_plotter.py  sample_analyzer.py  sample_summarizer.py  test_fit_alpha.py  test_margins.csv  test_margins_2.csv  test_sample_summarizer.py
SIS/data/: example.txt  example4.txt
SIS/outputs/: example3.txt  example4.txt
data/: asymmetric_1.txt  block_1.txt  symmetric_1.txt
data/polbooks_test_margins/: partition_1.txt  (+743 more)
docs/: conf.py  index.md  modules.rst
estimates/: linear_time.py  maximum_entropy.py
examples/: averages.py  correlator.py  count.py  errors.py  estimate.py  example.py  large.py  sample.py  sample_binary.py  speed.py  testing.py
src/: estimates.cpp  globals.h  helpers.cpp  helpers.h  preprocessing.cpp  preprocessing.h  sample_binary_core.cpp  sample_core.cpp  sample_core.h
tests/: TODO.txt  matrix-count_tests.nb  test_compiled.py  test_count.py  test_estimate.py  test_package.py  test_sample.py  test_util.py  tests.nb
(+15341 files in other folders)
